add to .gitignore

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,3 @@
+AUTOMAKE_OPTIONS = subdir-objects
 bin_PROGRAMS = yahtzee
-yahtzee_SOURCES = main.c
-
-clean-local:
-    @rm config.status configure config.log
-    @rm Makefile
-    @rm -r autom4te.cache/
-    @rm aclocal.m4
-    @rm compile install-sh missing Makefile.in 
+yahtzee_SOURCES = src/main.c
